--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@
 }
 
 .add-button{
-  background-color: teal;
+  background-color: #2460a5;
   border: none;
   border-radius: 10px;
   color: #fff;
@@ -63,13 +63,16 @@
   flex-wrap: wrap;
   gap: 12px ;
   padding-bottom: 12px;
+  overflow-y: scroll;
+  height: 250px;
 }
 
 .todo-container {
-  border: 4px solid teal;
+  border: 4px solid #080808;
   border-radius: 12px;
   padding: 12px 24px 24px;
   width: 270px;
+  height: 150px;
 }
 
 .button-set {
